feat: add functionality to delete conversations and messages